@@ -14,7 +14,9 @@
 	not being set to initial state. See bug #304566
 	* agent/seahorse-agent-cache.c: When gconf cache_authorize setting
 	is set to false, clear the cache. Closes a small security hole.
-	
+    * agent/seahorse-agent.c:
+    * libseahorse/seahorse-gpg-options.c: Cleanup handling of gpg.conf
+    
 2005-05-15  Nate Nielsen  <nielsen@memberwebs.com>
 
 	* libseahorse/seahorse-gconf.c: 
